Update theme options and add CI workflow

--- a/menu/themes/index.html
+++ b/menu/themes/index.html
@@ -15,7 +15,7 @@
     <p>Click-drag (or touch-flick) to spin the wheel.</p>
     <div>
       <button>Spin</button>
-      <p><label>Theme:</label><select></select></p>
+      <p><label>Options:</label><select></select></p>
     </div>
   </div>
 
